--- a/Makefile.am
+++ b/Makefile.am
@@ -124,7 +124,7 @@ bitcoin_bitcoin_impl_utility_include_HEADERS = \
 bitcoin_bitcoin_wallet_includedir = ${includedir}/bitcoin/bitcoin/wallet
 bitcoin_bitcoin_wallet_include_HEADERS = \
     include/bitcoin/bitcoin/wallet/address.hpp \
-    include/bitcoin/bitcoin/wallet/amount.hpp \
+    include/bitcoin/bitcoin/wallet/base10.hpp \
     include/bitcoin/bitcoin/wallet/base58.hpp \
     include/bitcoin/bitcoin/wallet/hd_keys.hpp \
     include/bitcoin/bitcoin/wallet/key_formats.hpp \
@@ -174,7 +174,7 @@ src_libbitcoin_la_SOURCES = \
     src/utility/threadpool.cpp \
     src/utility/timed_section.cpp \
     src/wallet/address.cpp \
-    src/wallet/amount.cpp \
+    src/wallet/base10.cpp \
     src/wallet/base58.cpp \
     src/wallet/hd_keys.cpp \
     src/wallet/key_formats.cpp \
@@ -204,7 +204,7 @@ test_libbitcoin_test_CPPFLAGS = \
     ${secp256k1_CFLAGS}
 
 test_libbitcoin_test_SOURCES = \
-    test/amount.cpp \
+    test/base10.cpp \
     test/base58.cpp \
     test/big_number.cpp \
     test/checksum.cpp \
