Test wihtout AC_GNU_SOURCE (clang on linux).

--- a/configure.ac
+++ b/configure.ac
@@ -43,7 +43,7 @@ AC_PROG_CXX
 AC_PROG_LIBTOOL
 
 # Declare using the GNU C library (glibc).
-AC_GNU_SOURCE
+#AC_GNU_SOURCE
 
 # Compute the canonical host-system type variable host, including host_os.
 AC_CANONICAL_HOST
