Update generated compiler flags.

--- a/configure.ac
+++ b/configure.ac
@@ -207,13 +207,13 @@ AS_CASE([${CC}], [*],
     [AX_CHECK_COMPILE_FLAG([-Wno-missing-braces],
         [CXXFLAGS="$CXXFLAGS -Wno-missing-braces"])])
 
-# Clean up Boost 1.54 headers. Enabled in clang only.
+# Clean up boost 1.54 headers. Enabled in clang only.
 #------------------------------------------------------------------------------
 AS_CASE([${CC}], [*clang*],
     [AX_CHECK_COMPILE_FLAG([-Wno-deprecated-register],
         [CXXFLAGS="$CXXFLAGS -Wno-deprecated-register"])])
 
-# Clean up Boost 1.49 headers. Enabled in gcc only.
+# Clean up boost 1.49 headers. Enabled in gcc only.
 #------------------------------------------------------------------------------
 AS_CASE([${CC}], [*gcc*],
     [AX_CHECK_COMPILE_FLAG([-Wno-unused-local-typedefs],
